@@ -52,16 +52,49 @@ sub parse_tessdata {
 sub languages {
  unless (%languages) {
   my %iso639 = (
+   ara        => 'Arabic',
+   bul        => 'Bulgarian',
+   cat        => 'Catalan',
+   ces        => 'Czech',
+   chr        => 'Cherokee',
+   chi_tra    => 'Chinese (Traditional)',
+   chi_sim    => 'Chinese (Simplified)',
+   dan        => 'Danish',
+   'dan-frak' => 'Danish (Fraktur)',
    deu        => 'German',
    'deu-f'    => 'German (Fraktur)',
    'deu-frak' => 'German (Fraktur)',
+   ell        => 'Greek',
    eng        => 'English',
+   fin        => 'Finish',
    fra        => 'French',
+   heb        => 'Hebrew',
+   hin        => 'Hindi',
+   hun        => 'Hungarian',
+   ind        => 'Indonesian',
    ita        => 'Italian',
+   jpn        => 'Japanese',
+   kor        => 'Korean',
+   lav        => 'Latvian',
+   lit        => 'Lituanian',
    nld        => 'Dutch',
+   nor        => 'Norwegian',
+   pol        => 'Polish',
    por        => 'Portuguese',
+   que        => 'Quechua',
+   ron        => 'Romanian',
+   rus        => 'Russian',
    slk        => 'Slovak',
+   'slk-frak' => 'Slovak (Fraktur)',
+   slv        => 'Slovenian',
    spa        => 'Spanish',
+   srp        => 'Serbian (Latin)',
+   swe        => 'Swedish',
+   'swe-frak' => 'Swedish (Fraktur)',
+   tha        => 'Thai',
+   tlg        => 'Tagalog',
+   tur        => 'Turkish',
+   ukr        => 'Ukranian',
    vie        => 'Vietnamese',
   );
   for ( glob "$tessdata/*$datasuffix" ) {
