@@ -3,6 +3,7 @@
 * Fixed ocropus support
   Closes bug 3487120 (Ocropus no longer in OCR selection)
 * Reference core font in PDF only once
+* Add more language codes for Tesseract and Cuneiform
 
 
 1.0.1 (05.02.2012):
